2011-01-12  Murray Cumming  <murrayc@murrayc.com>

	Pixbuf: Removed set_option() again.

	* gdk/src/pixbuf.hg: gdk_pixbuf_set_option() is actually only available when
	GDK_PIXBUF_ENABLE_BACKEND is set.
	
2011-01-12  Murray Cumming  <murrayc@murrayc.com>

	Pixbuf: Add some methods.

	* gdk/src/pixbuf.hg: Added set_option() and apply_embedded_orientation().

2011-01-12  Murray Cumming  <murrayc@murrayc.com>

	gtkmm: Added some new methods.

	* gtk/src/menuitem.hg: Added get/set_reserve_indicator().
	* gtk/src/menushell.hg: Added get_selected_item() and get_parent_shell().
	* gtk/src/stylecontext.hg: Added get/set_path() and get_screen().
	* gtk/src/treeview.[hg|ccg]: Added is_blank_at_pos().
	* tools/m4/convert_gdk.m4: Added necessary conversion.

2011-01-12  Murray Cumming  <murrayc@murrayc.com>

	Regenerate gdk-pixbufs defs.

	* gdk/src/gdk_pixbuf_methods.defs: Regenerated with h2defs.py.
	* gdk/src/gdk_extra.defs: Remove mention of 
	gdk_pixbuf_render_threshold_alpha(), which does not seem to exist anywhere now.

2011-01-11  Murray Cumming  <murrayc@murrayc.com>

	Fix the build.

	* gtk/src/selectiondata.hg: Include gdkmm/pixbuf.h now that it is not 
	included indirectly.

2011-01-11  Murray Cumming  <murrayc@murrayc.com>

	Regenerated signals and properties defs.

	* gdk/src/gdk_signals.defs:
	* gtk/src/gtk_signals.defs: Regenerated with h2defs.py, applying 
	gtk/src/gtk_signals.defs.patch from the top-level with -p1.

2011-01-11  Murray Cumming  <murrayc@murrayc.com>

	gdkmm: Fix some typos to fix the build.

	* gdk/src/dragcontext.ccg: Fix silly errors.

2011-01-11  Murray Cumming  <murrayc@murrayc.com>

	Screen: Fix a typo, so the monitors_changed() signal really uses the C signal.

	* gdk/src/screen.hg: The monitors_changed() signal was wrapping the 
	size_changed signal.

2011-01-11  Murray Cumming  <murrayc@murrayc.com>

	gdkmm: Added some methods.

	* gdk/src/display.hg: Added has_pending() and notify_startup_complete().