@@ -1,5 +1,16 @@
 2011-01-12  Murray Cumming  <murrayc@murrayc.com>
 
+	Fix the make check build.
+
+	* demos/gtk-demo/example_change_display.cc: Comment out the code that 
+	we cannot yet port because the C example has not been ported.
+	See https://bugzilla.gnome.org/show_bug.cgi?id=638907
+	This at least fixes distcheck so I can make a tarball release.
+	* demos/gtk-demo/example_stockbrowser.cc: Revert my previous clear()->reset() 
+	change because this was actually meant to call Image::clear().
+	
+2011-01-12  Murray Cumming  <murrayc@murrayc.com>
+
 	Pixbuf: Removed set_option() again.
 
 	* gdk/src/pixbuf.hg: gdk_pixbuf_set_option() is actually only available when
